--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ToDoList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
@@ -40,7 +40,7 @@
                             <constraint firstItem="f2I-Pj-lpg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zWM-cw-2gt"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="C1D-NI-w2P">
+                    <navigationItem key="navigationItem" title="ToDoList" id="C1D-NI-w2P">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="01a-Ed-LCS">
                             <connections>
                                 <action selector="addButtonAction:" destination="BYZ-38-t0r" id="GD9-Wn-cDX"/>
